Add swap APIs
